# dronedays2021-tutorial

./: CMakeLists.txt  README.md  package.xml
config/: rviz_config.rviz
include/dronedays2021/: dronedays2021.hpp
launch/: human.launch  uav.launch  ugv.launch
src/: exercises.cpp  human.cpp  robot.cpp  teleop.py  uav.cpp  ugv.cpp
